[fix][build][branch-4.0] Fix broken compilation after cherry-picking #25400
(cherry picked from commit f0e98a20bbc8657e569e0d588afcc28185e232ef)